# Langgraph_Email_Assistant_Agent

./: .gitignore  README.md  hello.py  langgraph.json  pyproject.toml
ea/: gmail.py
ea/cron/: cron_graph.py
ea/main/: config.py  config.yml  draft_response.py  fewshot.py  find_meeting_time.py  gmail.py  graph.py  human_inbox.py  models.py  rewrite.py  triage.py
ea/reflection/: general_reflection.py  multi_reflection.py  utils.py
ea/scripts/: run_ingest.py  setup_gmail.py
email_assistant/main/: fewshot.py  gmail.py  graph.py  human_inbox.py  rewrite.py  triage.py
email_assistant/reflection/: general_reflection.py  multi_reflection.py
main/: config.py  draft_response.py  fewshot.py  graph.py  human_inbox.py  triage.py
scripts/: run_ingest.py  setup_cron.py  setup_gmail.py
src/: config.yml  find_meeting_time.py  gmail.py  models.py  triage.py
