[project]
name = "email-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.160.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "langchain-openai>=0.3.2",
    "langchain[all]>=0.3.16",
    "langgraph>=0.2.68",
    "langgraph-cli[inmem]>=0.1.56",
    "langgraph-sdk>=0.1.51",
    "langsmith>=0.3.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]
